@@ -1,3 +1,3 @@
 usr/sbin/pgld
-usr/lib/pgl/libdbus.so
+usr/lib/*/pgl/libdbus.so
 etc/dbus-1/system.d/org.netfilter.pgl.conf
