@@ -1,6 +1,9 @@
 pgl (2.2.1~git-1~pre1) UNRELEASED; urgency=low
 
   * new upstream release
+  * control:
+    - changed pglcmd from architecture all to any (pglcmd.defaults lists
+      architecture specific paths)
 
  -- jre <jre-phoenix@users.sourceforge.net>  Wed, 13 Jun 2012 19:27:34 +0200
 
